Change documentstion Swagger
